Добавляет изменения по Бэм

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,12 +61,12 @@
     <main>
         <section class="portfolio section">
            <div class="container">
-            <ul class="portfolio__nav list">
-                <li class="portfolio__item"><button class="portfolio__button" type="button">Все</button></li>
-                <li class="portfolio__item"><button class="portfolio__button" type="button">Веб-сайты</button></li>
-                <li class="portfolio__item"><button class="portfolio__button" type="button">Приложения</button></li>
-                <li class="portfolio__item"><button class="portfolio__button" type="button">Дизайн</button></li>
-                <li class="portfolio__item"><button class="portfolio__button" type="button">Маркетинг</button></li>
+            <ul class="portfolio-nav list">
+                <li class="portfolio-nav__item"><button class="portfolio-nav__button" type="button">Все</button></li>
+                <li class="portfolio-nav__item"><button class="portfolio-nav__button" type="button">Веб-сайты</button></li>
+                <li class="portfolio-nav__item"><button class="portfolio-nav__button" type="button">Приложения</button></li>
+                <li class="portfolio-nav__item"><button class="portfolio-nav__button" type="button">Дизайн</button></li>
+                <li class="portfolio-nav__item"><button class="portfolio-nav__button" type="button">Маркетинг</button></li>
             </ul>
             <ul class="project list">
                 <li class="project__item">
