добавляет заключение по Бэм

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                 <a href="./index.html" class="site-nav__link link ">Студия</a>
               </li>
               <li class="site-nav__item">
-                <a href="" class="site-nav__link  link current"
+                <a href="" class="site-nav__link  link site-nav__link--current"
                   >Портфолио</a
                 >
               </li>
@@ -217,9 +217,9 @@
           
           <div class="footer__contact-info">
             <!-- Лого футер -->
-          <a href="" class="footer__logo link"
-          >Web<span class="footer__logo-second">Studio</span>
-        </a>
+            <a href="" class="logo footer__logo link"
+            >Web<span class="logo__change-color logo__change-color--inverse">Studio</span></a
+          >
         <address class="footer__address">г. Киев, пр-т Леси Украинки, 26</address>
         <address class="footer__address">
           <ul class="footer__contact-list list">
