--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <nav class="header-navigator">
             <ul class="site-nav list">
               <li class="site-nav__item">
-                <a href="" class="site-nav__link link current">Студия</a>
+                <a href="" class="site-nav__link link site-nav__link--current">Студия</a>
               </li>
               <li class="site-nav__item">
                 <a href="./portfolio.html" class="site-nav__link  link"
@@ -414,9 +414,9 @@
           
           <div class="footer__contact-info">
             <!-- Лого футер -->
-          <a href="" class="footer__logo link"
-          >Web<span class="footer__logo-second">Studio</span>
-        </a>
+            <a href="" class="logo footer__logo link"
+            >Web<span class="logo__change-color logo__change-color--inverse">Studio</span></a
+          >
         <address class="footer__address">г. Киев, пр-т Леси Украинки, 26</address>
         <address class="footer__address">
           <ul class="footer__contact-list list">
